
Add option for sending partial screen information to file and/or e-mail.

Add restore of session sizes in MDI session interface.

Known problems
--------------
On some JVM linux machines the keymappings will have to be changed from the
default that I set up.  This is for JVM supplied by IBM.


Enhancements/Change Log
-----------------------
20/11/2009  Renamed: the applet to "org.tn5250j.My5250Applet" to avoid confusing with 'Application'
            Fixed: IndexOutOfBoundsException, when trying to reorder a single tab
            Fixed: NullPointerExceptions when trying to transmit no file to/from AS400

18/06/2005  New release with a whole lot enhancements.  Do not remember them all
            read the Readme.txt file for more information
            
13/03/2004  Fixed some field exit problems.

15/02/2004  Well we have not kept this up to date at all.  Hopefully
            we can catch it up to date from now on.

            Fixed the bounding area.
            Added kunstoff look and feel - Patrick Bielen
            Added access to functions/operations with password access
            Added delete macros functionality - Right click on the macro
            Fixed up some of the panels - Patrick Bielen
            Fixed a lot of problems in E-mail - Patrick Bielen
            Added new options to e-mail functions
               - New output to image .png
               - New access to just send quick message with file attachment -
                     Patrick Bielen
               - Send screen image via e-mail - Fixes by Patrick Bielen
            Added new options to define the margins for the Print Screen
               function.
            Added auto login support
            New splash screen donated by Carlo Daffara from Conecta http://www.conecta.it
            Added blinking cursor.  Beta code and may leave traces
            Added a new keep alive function to fix some network disconnect
               problems.
